--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.github.spring</groupId>
-	<artifactId>github spring demo</artifactId>
+	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>github spring demo</name>
+	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
