--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<executable> C:\\Progra~1\\Java\\jdk1.8.0_171\\bin\\javac.exe</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
